--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.5",
     "chart.js": "^4.2.1",
     "jspdf": "^3.0.1",
+    "lucide-vue-next": "^0.511.0",
     "pinia": "^2.0.34",
     "postcss": "^8.4.22",
     "tailwindcss": "^3.3.1",
